<resources>
    <string name="app_name">Feedback System Admin</string>
    <string name="app_name_short">Feedback System</string>
    <string name="label_reportPage">Report</string>
    <string name="label_scanPage">Scan QR Code</string>
    <string name="welcome">Welcome\nChào mừng</string>
    <string name="feedback_invitation">Please provide your feedback\nVui lòng cung cấp phản hồi của bạn</string>
    <string name="feedback_veryPoor">Very Poor</string>
    <string name="feedback_excellent">Excellent</string>
    <string name="feedback_good">Good</string>
    <string name="feedback_average">Everage</string>
    <string name="feedback_poor">Poor</string>
    <string name="dialog_thanks_description">Thanks for your feedback!</string>
    <string name="title_activity_admin_main">Feedback Admin System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_location_title">Location/Subject\nInformation</string>
    <string name="fragment_location_hintShortDescription">Short Description</string>
    <string name="fragment_location_hintLongDescription">Long Description</string>
    <string name="feedback_reason">Please share with us the reasons for your selection</string>
    <string name="feedback_wet_floor">Wet Floor\n</string>
    <string name="feedback_bin_full">Bin Full\n</string>
    <string name="feedback_noToiletPaper">No\nToilet Paper</string>
    <string name="feedback_dirtyToiletBowl">Dirty\nToilet Bowl</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="device_information">Device Information</string>
    <string name="add_device">Add Device</string>
    <string name="device_id">Device ID</string>
    <string name="location_subject">Location/Subject</string>
    <string name="hint_enter_id">Enter device ID</string>
    <string name="hint_enter_location">Select Location</string>
    <string name="create">Create</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="add_location">Add Location/Subject</string>
    <string name="select_location">Select Location/Subject</string>
    <string name="start_date">Start Date</string>
    <string name="hint_select_start_day">Select Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hint_select_end_day">Select End Date</string>
    <string name="report">Submit</string>
    <string name="device_name">Device Name</string>
    <string name="hint_enter_device_name">Enter device name</string>
    <string name="edit_device">Edit Device</string>
    <string name="update">Update</string>
    <string name="edit_location">Edit Location/Subject</string>
    <string name="action_share">Share</string>
    <string name="action_download">Download</string>
</resources>
