<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_feedback_screen"
    tools:context="android.mobile.feedbacksystem.ui.feedback.home.SubmitReasonActivity">

    <RelativeLayout
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/feedback_reason"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_top"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_wetFloor"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_wet_floor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/feedback_wet_floor"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_binFull"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_trash" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/feedback_bin_full"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_noPaper"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_paper" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/feedback_noToiletPaper"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_dirtyToilet"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_toilet_dirty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/feedback_dirtyToiletBowl"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_container"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_radius"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_blue_radius"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>
</RelativeLayout>
