<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/fragment_location_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/fragment_location_hintShortDescription"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_long"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:gravity="top"
            android:hint="@string/fragment_location_hintLongDescription"
            android:padding="12dp"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_blue_radius"
        android:gravity="center"
        android:padding="6dp"
        android:text="Update"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/bg_blue_radius"
        android:gravity="center"
        android:padding="6dp"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>